--- a/CSS/style.css
+++ b/CSS/style.css
@@ -56,7 +56,7 @@ h3{
     align-items: center;
     list-style: none;
 }
-#display li{
+#display .todoItem{
     background-color: white;
     width:16rem;
     height: 1.5rem;
@@ -65,11 +65,11 @@ h3{
     justify-content: space-between;
     align-items: center;
 }
-#display li label{
+#display .todoItem {
     color: #000000;
 }
 
-#display li button{
+#display .todoItem button{
     width:2rem;
     height:1.4rem;
     font-size: .7rem;
